--- a/Frontend/app/build.gradle
+++ b/Frontend/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.mainactivity"
-        minSdk 21
+        minSdk 32
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -45,4 +45,10 @@ android {
         androidTestImplementation 'androidx.test.ext:junit:1.1.3'
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     }
+}
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
